--- a/LOGIC+DISCRETEMATH_CLASS_00.ipynb
+++ b/LOGIC+DISCRETEMATH_CLASS_00.ipynb
@@ -35,8 +35,8 @@
         "**Learning Objectives:**\n",
         "*   Building a simple program to solve a simple discrete problem\n",
         "*   Refining this simple program\n",
-        "*   Proving the program's correctness\n",
-        "*   Analysis of program's efficiency\n",
+        "*   Proving the program correctness\n",
+        "*   Analysis of program efficiency\n",
         "\n",
         "</div>\n"
       ],
