--- a/LOGIC+DISCRETEMATH_CLASS_01.ipynb
+++ b/LOGIC+DISCRETEMATH_CLASS_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFEFkxIr0DJmJ2/1h4KgUs",
+      "authorship_tag": "ABX9TyM7I28L4d9V+Lp2wDqJWunY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "\n",
         "• E⊆Q×Act×Q: afinite set of edges\n",
         "\n",
-        "no edges with source 𝑞􏰗.\n",
+        "no edges with source 𝑞▴.\n",
         "\n",
         "We sometimes write PG = (Q, 𝑞⊳𝑞▴, Act, E) to summarise the components of the program graph.\n",
         "\n"
@@ -110,7 +110,7 @@
         "\n",
         "*   Q = {𝑞⊳, 𝑞1, 𝑞2, 𝑞3, 𝑞▴}\n",
         "*   Act = {𝚢∶=𝟷,𝚡>𝟶,𝚡≤𝟶,𝚢∶=𝚡∗𝚢,𝚡∶=𝚡−𝟷}\n",
-        "*   E = {(𝑞⊳,𝚢 ∶= 𝟷,𝑞1),(𝑞1,𝚡 > 𝟶,𝑞2),(𝑞1,𝚡 ≤ 𝟶,𝑞􏰗), (𝑞2, 𝚢 ∶= 𝚡 ∗ 𝚢, 𝑞3), (𝑞3, 𝚡 ∶= 𝚡 − 𝟷, 𝑞1)}\n",
+        "*   E = {(𝑞⊳,𝚢 ∶= 𝟷,𝑞1),(𝑞1,𝚡 > 𝟶,𝑞2),(𝑞1,𝚡 ≤ 𝟶,𝑞▴), (𝑞2, 𝚢 ∶= 𝚡 ∗ 𝚢, 𝑞3), (𝑞3, 𝚡 ∶= 𝚡 − 𝟷, 𝑞1)}\n",
         "\n",
         "where the first set lists the nodes, including the initial and final nodes, the second set lists the actions, and the third set lists the edges.\n",
         "\n",
