--- a/LOGIC+DISCRETEMATH_CLASS_00.ipynb
+++ b/LOGIC+DISCRETEMATH_CLASS_00.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPQGAup0DTC/K10b+srMrPp",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lucianosilva-github/logicanddiscretemathematics/blob/main/LOGIC%2BDISCRETEMATH_CLASS_00.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "33EEpDW7pOaO"
+      },
       "source": [
         "<div class=\"alert alert-block alert-info\">\n",
         "\n",
@@ -39,13 +26,13 @@
         "*   Analysis of program efficiency\n",
         "\n",
         "</div>\n"
-      ],
-      "metadata": {
-        "id": "33EEpDW7pOaO"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "iyV-u81mKdDo"
+      },
       "source": [
         "### **EXERCISE 1.** \n",
         "\n",
@@ -56,83 +43,103 @@
         "\n",
         "Build an iteractive function fact(n) in Python to compute n! and test it:\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "iyV-u81mKdDo"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#TYPE YOUR SOLUTION HERE"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qqIisS25pMm5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#TYPE YOUR SOLUTION HERE"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IiH2Xppf6rbg"
+      },
       "source": [
         "### **EXERCISE 2.** \n",
         "\n",
         "Rewrite the function fact(n) in a simpler way and test it:"
-      ],
-      "metadata": {
-        "id": "IiH2Xppf6rbg"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#TYPE YOUR SOLUTION HERE"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Tc2TcLCK7BPw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#TYPE YOUR SOLUTION HERE"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sWzDnukBLtoX"
+      },
       "source": [
         "### **EXERCISE 3.** \n",
         "\n",
         "Prove that your function fact(n) computes n!:"
-      ],
-      "metadata": {
-        "id": "sWzDnukBLtoX"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "USE THIS CELL TO PROVE"
-      ],
       "metadata": {
         "id": "ferrSHvoMLtt"
-      }
+      },
+      "source": [
+        "USE THIS CELL TO PROVE"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6RRRVjqpMVWM"
+      },
       "source": [
         "### **EXERCISE 4.** \n",
         "\n",
         "How many multiplications does your fact(n) implementation use ?"
-      ],
-      "metadata": {
-        "id": "6RRRVjqpMVWM"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "USE THIS CELL TO COUNT THE NUMBER OF MULTIPLICATIONS"
-      ],
       "metadata": {
         "id": "rICemo4iMnZA"
+      },
+      "source": [
+        "USE THIS CELL TO COUNT THE NUMBER OF MULTIPLICATIONS"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPQGAup0DTC/K10b+srMrPp",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.11.1"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
     }
-  ]
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
